--- a/vaelix-ui/Cargo.toml
+++ b/vaelix-ui/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+egui = "0.27"
+eframe = "0.27"
+urlencoding = "2.1"
+open = "5.0"
+
+[[bin]]
+name = "vaelix-ui"
+path = "src/main.rs"
