First piece done.. builders read BUILD.md in the ROOT of this repository.

--- a/apps/sieben-native/CMakeLists.txt
+++ b/apps/sieben-native/CMakeLists.txt
@@ -1,74 +1,74 @@
-cmake_minimum_required(VERSION 3.31)
-project(sieben-native)
+cmake_minimum_required(VERSION 3.21)
+project(sieben-native LANGUAGES C CXX)
 
-# Set C++20 standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_EXTENSIONS ON)
 
-# Find required packages
+add_compile_options(-fno-lto)
+add_link_options(-fuse-ld=lld -fno-lto)
+
 find_package(Threads REQUIRED)
-
-# Wayland-specific packages
 find_package(PkgConfig REQUIRED)
+
 pkg_check_modules(WAYLAND REQUIRED wayland-client wayland-cursor wayland-egl)
 pkg_check_modules(XKBCOMMON REQUIRED xkbcommon)
 pkg_check_modules(GBM REQUIRED gbm)
 
-# CEF configuration
-set(CEF_ROOT "${CMAKE_SOURCE_DIR}/cef_artifacts")
+# ——— CEF paths (relative to this CMakeLists.txt location) ———
+set(CEF_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../cef_artifacts")
 set(CEF_INCLUDE_DIR "${CEF_ROOT}/include")
-set(CEF_LIBRARY_DIR "${CEF_ROOT}/Release") # Use Release build as requested
 
-# Intel-specific libraries for hardware acceleration
-find_library(VA_LIB va)
-find_library(VA_DRM_LIB va-drm)
-find_library(VULKAN_LIB vulkan)
+add_executable(sieben-native
+    src/main.cpp
+    src/wayland_handler.cpp
+)
 
-# Add include directories
-include_directories(
+# ——— Include directories (this fixes 'cef_app.h' not found) ———
+target_include_directories(sieben-native PRIVATE
     ${CEF_INCLUDE_DIR}
     ${WAYLAND_INCLUDE_DIRS}
     ${XKBCOMMON_INCLUDE_DIRS}
     ${GBM_INCLUDE_DIRS}
-    ${CMAKE_SOURCE_DIR}/cef_artifacts/include
-    ${CMAKE_SOURCE_DIR}/cef_artifacts # Add this for CEF's relative includes
 )
 
-# Link directories
-link_directories(${CEF_LIBRARY_DIR})
+# ——— Link the official wrapper + libcef.so ———
+target_link_libraries(sieben-native PRIVATE
+    "${CEF_ROOT}/build/libcef_dll_wrapper/libcef_dll_wrapper.a"
+    "${CEF_ROOT}/Release/libcef.so"
 
-# Source files
-add_executable(sieben-native
-    src/main.cpp
-    src/wayland_handler.cpp
-    src/wayland_handler.h
-)
-
-# Link libraries - Proper CEF linking as per your instructions
-target_link_libraries(sieben-native
-    ${CEF_LIBRARY_DIR}/libcef.so
+    EGL
+    GLESv2
     ${WAYLAND_LIBRARIES}
     ${XKBCOMMON_LIBRARIES}
     ${GBM_LIBRARIES}
-    ${VA_LIB}
-    ${VA_DRM_LIB}
-    ${VULKAN_LIB}
-    pthread
+    va
+    va-drm
+    vulkan
+    Threads::Threads
     dl
     rt
-    X11
-    -Wl,-rpath,${CEF_LIBRARY_DIR}
+    pthread
 )
 
-# Set output directory
-set_target_properties(sieben-native PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-)
-
-# Enable tcmalloc if available
-find_library(TCMALLOC_LIB tcmalloc)
+# ——— Optional tcmalloc ———
+find_library(TCMALLOC_LIB NAMES tcmalloc tcmalloc_minimal)
 if(TCMALLOC_LIB)
-    target_link_libraries(sieben-native ${TCMALLOC_LIB})
-    message(STATUS "Using tcmalloc for memory allocation")
+    target_link_libraries(sieben-native PRIVATE ${TCMALLOC_LIB})
 endif()
+
+# ——— Output and runtime ———
+set_target_properties(sieben-native PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+    BUILD_RPATH "$ORIGIN/../cef_artifacts/Release"
+    INSTALL_RPATH "$ORIGIN:$ORIGIN/../cef_artifacts/Release"
+)
+
+add_custom_command(TARGET sieben-native POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    "${CEF_ROOT}/Release/libcef.so"
+    "$<TARGET_FILE_DIR:sieben-native>/"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    "${CEF_ROOT}/Resources"
+    "$<TARGET_FILE_DIR:sieben-native>/"
+)
